z-index fixes
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@28648 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_page.scss
+++ b/skins/oasis/css/core/_page.scss
@@ -1,10 +1,9 @@
 .WikiaPage {
 	background: $color-page;
 	border: 1px solid $color-page-border;
-	margin: 0 auto -59px;
+	margin: -59px auto -39px;
 	padding-top: 59px;
 	position: relative;
-	top: -59px;
 	width: $width-outside;
 	>h1:first-child {
 		display: none;
@@ -14,7 +13,6 @@
 .WikiaMainContent {
 	float: left;
 	width: $width-outside - 320px;
-	z-index: 0;
 	// one column layout (no right rail)
 	.oasis-one-column & {
 		width: $width-outside;
